--- a/produtos.html
+++ b/produtos.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SHOP BR</title>
+    
+<script>
+
+    window.chatCompany = '8d524237-db1f-11ee-b953-0efe19d493fb';
+
+    window.chatChannel = '2c6221b2-9e4d-4107-8d07-21349f0f3f4e';
+
+    window.chatNotificationSound = 'sim';
+
+    window.chatHeaderColor = '#00d9ff';
+
+    window.chatHeaderIcon = 'sim';
+
+    window.chatTitle = 'OC360-teste';
+
+    window.chatFooterText = 'sim';
+
+</script>
+
+<script src='https://hub.notificame.com.br/schedule/webchat.js'></script>
+    
   </head>
   <body>
     <center>
