--- a/produtos.html
+++ b/produtos.html
@@ -17,7 +17,7 @@
       
 <div class="image">
     <img src="/img/camisa polo puma.PNG" alt="Imagem 6" height="75%" width="70%">
-    <h1>2 - CAMISA POLO PUMA</h1>
+    <h1>2 - CAMISA POLO PUMA BLACK</h1>
     <a href="https://shope.ee/3AfHBC1WtN"><h3>IR PARA A LOJA</h3></a><br>
 </div>
 <div class="image">
